換一個啟動檔
git-svn-id: http://www.castiello-tsai.org:8523/svn/L1JTW@899 96aee97a-5c11-ed42-8518-d7f33e96f5f9